Fix footer scrollbar

--- a/css/post.css
+++ b/css/post.css
@@ -283,7 +283,7 @@ h1:hover a.anchor,h2:hover a.anchor,h3:hover a.anchor{display:inline;color:#6432
     border-image: url(/images/haddock/fish.png) 0 0 100% repeat;
 }
 .footer {padding-top: 1rem; padding-bottom: 1rem;}
-
+footer div {max-width: 100%;}
 @media (min-width:768px) {
 .stretch {height: 100% !important; position: relative !important; align-items:stretch;}
 .footer-h {position: absolute; top: 0; left:50%;transform: translateX(-50%);}
